# lvgl_win_vscode

./: .gitignore  BUILD.md  BUILD_STANDALONE.md  CMakeLists.txt  PROJECT_SELECTION.md  build.bat  clean.bat  lv_conf.h  package-lock.json  run.bat  simulator.code-workspace  快速开始.txt  构建说明.md
src/: main.c
